--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button type="submit" class="btn">Login</button>
             
             <div class="register-link">
-                <p>Dont have an account!!!? <a href="#">Register</a></p>
+                <p>Dont have an account? <a href="#">Register</a></p>
             </div>
         </form>
     </div>
